Write Todo and add eventListener & logicProcess & dataInteract.

--- a/index.html
+++ b/index.html
@@ -7,30 +7,33 @@
   <title>Todo List</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+  <script src="eventListener.js"></script>
+  <script src="logicProcess.js"></script>
+  <script src="dataInteract.js"></script>
+  <script src="todo.js"></script>
 </head>
 
 <body>
   <div id="total">
     <header>Todo List</header>
     <div id="add_todo">
-        <input type="text" placeholder="请输入" />
-        <button type="submit">添加</button>
+      <input type="text" placeholder="请输入" />
+      <button type="submit">添加</button>
     </div>
     <div id="main">
       <!-- <table id="todo_table">
         <tbody> -->
-          <ul id="todo_list">
-            <li>123<span>x</span></li>
-            <li>456<span>x</span></li>
-            <li>789<span>x</span></li>
-            <li>789<span>x</span></li>
-            <li>789<span>x</span></li>
-            <li>789<span>x</span></li>
-            <li>789<span>x</span></li>
-            <li>789<span>x</span></li>
-          </ul>
-        <!-- </tbody>
+      <ul id="todo_list">
+        <li>123<span>x</span></li>
+        <li>456<span>x</span></li>
+        <li>789<span>x</span></li>
+        <li>789<span>x</span></li>
+        <li>789<span>x</span></li>
+        <li>789<span>x</span></li>
+        <li>789<span>x</span></li>
+        <li>789<span>x</span></li>
+      </ul>
+      <!-- </tbody>
       </table> -->
     </div>
     <div id="foot_buttons">
