Add changeCompletedButtonColor into buttonCompletedListener.

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </div>
     <div id="footButtons">
       <span id="leftItems">leftiems:3</span>
-      <input type="button" value="ALL" onclick="buttonAllListener()">
-      <input type="button" value="ACTIVE" onclick="buttonActiveListener()">
-      <input type="button" value="COMPLETE" onclick="buttonCompleteListener()">
-      <input type="button" value="clear Completed" onclick="clearCompletedListener()">
+      <input type="button" id="all" value="ALL" onclick="buttonAllListener()">
+      <input type="button" id="active" value="ACTIVE" onclick="buttonActiveListener()">
+      <input type="button" id="completed" value="COMPLETE" onclick="buttonCompleteListener()">
+      <input type="button" id="clearCompleted" value="clear Completed" onclick="clearCompletedListener()">
     </div>
   </div>
   <p id="test">1</p>
