Complete all function requirements.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="main">
       <!-- <table id="todo_table">
         <tbody> -->
-      <ul id="todoList">
+      <ul id="todoList" onclick="completeTodoListener(event)">
         <!-- <li>123<span>x</span></li>
         <li>456<span>x</span></li>
         <li>789<span>x</span></li>
