--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <script>
-    localStorage.clear();
+    // localStorage.clear();
     function addTodoListener() {
   let todo = generateNewTodo();
   addTodo(todo);
@@ -62,6 +62,11 @@ class Todo {
   }
 }
 
+let deleteasd=(event)=>{
+  event.target.color='red';
+  console.log(event.target.innerHTML)
+}
+
   </script>
 
 </head>
@@ -77,9 +82,9 @@ class Todo {
       <!-- <table id="todo_table">
         <tbody> -->
       <ul id="todoList">
-        <li>123<span>x</span></li>
-        <li>456<span>x</span></li>
-        <li>789<span>x</span></li>
+        <li onclick="deleteasd(event)">123<span>x</span></li>
+        <li onclick="deleteasd(event)">456<span>x</span></li>
+        <li onclick="deleteasd(event)">789<span>x</span></li>
         <li>789<span>x</span></li>
         <li>789<span>x</span></li>
         <li>789<span>x</span></li>
