Create and change directory.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Todo List</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script type="text/javascript" src="eventListener.js"></script>
-  <script type="text/javascript" src="logicProcess.js"></script>
-  <script type="text/javascript" src="dataInteract.js"></script>
-  <script type="text/javascript" src="todo.js"></script>
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+  <script type="text/javascript" src="./js/dataInteract.js"></script>
+  <script type="text/javascript" src="./js/eventListener.js"></script>
+  <script type="text/javascript" src="./js/logicProcess.js"></script>
+  <script type="text/javascript" src="./js/todo.js"></script>
 </head>
 
 <body onload="onloadPageListener()">
