Change css style and therefore modify some function.

--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
 
 <body onload="onloadPageListener()">
   <div id="total">
-    <header>Todo List</header>
-    <div id="addTodo">
-      <input type="text" id="inputBox" placeholder="请输入" onkeypress="if(event.keyCode==13) {addTodoListener()}" />
-      <button type="submit" onclick="addTodoListener()">添加</button>
-    </div>
+    <header>
+        <label for="title">ToDoList</label>
+    <input type="text" id="inputBox" placeholder="请输入" onkeypress="if(event.keyCode==13) {addTodoListener()}" />
+  </header>
     <div id="main">
       <ul id="todoList" onclick="completeTodoListener(event)">
       </ul>
     </div>
     <div id="footButtons">
       <span id="leftItems"></span>
-      <input type="button" id="all" value="ALL" onclick="buttonAllListener()">
-      <input type="button" id="active" value="ACTIVE" onclick="buttonActiveListener()">
-      <input type="button" id="completed" value="COMPLETE" onclick="buttonCompleteListener()">
-      <input type="button" id="clearCompleted" value="clear Completed" onclick="clearCompletedListener()">
+      <input type="button" class="button" id="all" value="ALL" onclick="buttonAllListener()">
+      <input type="button" class="button" id="active" value="ACTIVE" onclick="buttonActiveListener()">
+      <input type="button" class="button" id="completed" value="COMPLETE" onclick="buttonCompleteListener()">
+      <input type="button" class="button" id="clearCompleted" value="clear Completed" onclick="clearCompletedListener()">
     </div>
   </div>
 </body>
